finalizando índice onomástico

--- a/ORIGINAIS.tex
+++ b/ORIGINAIS.tex
@@ -12,11 +12,11 @@ com a luta antirracista.}
 Este curto ensaio foi atropelado pela \emph{ordem}. Quando escrevia a
 parte final, me vi a amontoar tantos conceitos e pintá"-los tal como pede
 nosso contexto, que fui derrubado pela terrível notícia do assassinato
-de Marielle Franco e Anderson Gomes, ocorrido em 14 de março de 2018,
-data do nascimento de Castro Alves, de Carolina Maria de Jesus, de
+de \index{Franco, Marielle}Marielle Franco e \index{Gomes, Anderson}Anderson Gomes, ocorrido em 14 de março de 2018,
+data do nascimento de \index{Alves, Castro}Castro Alves, de \index{Jesus, Carolina Maria de}Carolina Maria de Jesus, de
 \index{Nascimento, Abdias do}Abdias do Nascimento e, por contingência, do próprio autor.
 
-Eu não conhecia Marielle Franco, porém seu assassinato foi sentido em
+Eu não conhecia \index{Franco, Marielle}Marielle Franco, porém seu assassinato foi sentido em
 minha pele. Choramos sua morte. O seu sangue era o nosso. Erro seria
 crer que o grande dissídio que nesses últimos tempos se estabeleceu no
 seio da esquerda se assentasse numa diferença estratégica e que o
@@ -29,7 +29,7 @@ Desde então tudo mudou, mas nada saiu do lugar.
 Seria muito importante que qualquer militante e crítico de esquerda não
 fosse mais o mesmo depois dessa morte. As poucas ilusões com a política
 oligárquica brasileira deveriam ser desfeitas pelos tiros dados em
-Marielle e no seu motorista. É uma política de morte que funciona sob
+\index{Franco, Marielle}Marielle e no seu motorista. É uma política de morte que funciona sob
 pressupostos rentáveis e significante colonizado.
 
 Nós sabíamos disso? Talvez, mas até então duvidávamos. Hoje não se pode
@@ -122,7 +122,7 @@ o funcionamento da \emph{psicologia das massas.}
 Psicologia que hoje em dia foi
 capturada pelo gozo escópico do narcisismo autorreferenciado das redes
 sociais.\footnote{Essa noção me foi passada pelo grandioso artigo de
-  Patrícia do Prado Ferreira Lemos: \emph{Entre o olho e o olhar:} o
+  \index{Lemos, Patrícia do Prado Ferreira}Patrícia do Prado Ferreira Lemos: \emph{Entre o olho e o olhar:} o
   gozo escópico no Facebook.}
 
 Sendo assim, o que governa a identificação é a simpatia que impõe não
@@ -319,8 +319,7 @@ colonizados por meio da \emph{tolerância}.
 É óbvio que esse conceito oculta
 uma normatividade da apropriação do excedente, enquanto busca o controle
 da margem admissível em relação à própria medida europeia. Quando
-Diderot, Buffon e \index{Voltaire}Voltaire buscaram afastar"-se da metafísica apenas
-descrevendo os fenômenos ``naturais'', acabaram por instituir, ainda que
+\index{Diderot, Denis}Diderot, \index{Buffon, Conde de}Buffon e \index{Voltaire}Voltaire buscaram afastar"-se da metafísica apenas descrevendo os fenômenos ``naturais'', acabaram por instituir, ainda que
 a contragosto, uma das mais admiráveis ilusões: a neutralidade
 científica como componente de dominação.
 
@@ -384,7 +383,7 @@ Também \index{Fanon, Frantz}Fanon em algum ponto de
 caso o fundamento da identidade \emph{negra} foi concomitante com o
 delírio narcísico branco e europeu.
 
-Ora, se Diderot foi um digno mediador do que a situação da nova ideia de
+Ora, se \index{Diderot, Denis}Diderot foi um digno mediador do que a situação da nova ideia de
 homem continha de universalista e desafiadora, por outro lado, \index{Voltaire}Voltaire,
 mas não só ele, introduziu nas \emph{Luzes} a particularização
 identificatória que estamos buscando: a divisão de subespécies de
@@ -428,9 +427,8 @@ lugar do espaço sócio"-político no qual ainda vivemos e que produz
 diferenciação racial e muros asseguradores \emph{nacionais}.
 
 O delírio da diferenciação racial encontraria então na \emph{Lettre à
-madame de Graffigny} de Turgot a justificação plausível da exploração
-europeia: ``a desigualdade social
-radical se inicia na natureza física desigual dos `diferentes'
+madame de Graffigny} de \index{Turgot, Anne Robert Jacques}Turgot a justificação plausível da exploração
+europeia: ``a desigualdade social radical se inicia na natureza física desigual dos `diferentes'
 humanos.'' Sendo o branco europeu mais próximo da
 racionalidade e desenvolvido tecnicamente, naturalmente sua posição
 seria a de comando. O delírio seria assim um exercício de expurgar as
@@ -469,7 +467,7 @@ que agia silenciosamente por trás das costas dos bons teóricos; a
 colonização que permitiu a riqueza europeia precisaria também encontrar
 justificação espiritual.
 
-Foi Hegel quem demonstrou esse cinismo constitutivo do paradoxo
+Foi \index{Hegel, G. W. Friedrich}Hegel quem demonstrou esse cinismo constitutivo do paradoxo
 formulado pela era das Luzes; preparado o cenário hierárquico -- a
 subespécie humana -- faltava apenas a máscara menos inadequada de
 desresponsabilização tensionado pelo modo de exploração radical da
@@ -483,17 +481,17 @@ ilustrada, não é monopólio só da elite brasileira, mas uma figura
 universal das teses morais da Europa. Foi quando ``a epistemologia,
 campo filosófico profundo da justificação da ética tecnocrática, se
 sobressaiu e representou, no discurso ideológico, a unidimensionalidade
-da atividade científica''.\footnote{Devo essa noção a Luiz Ben Hassanal
+da atividade científica''.\footnote{Devo essa noção a \index{Silva, Luiz Ben Hassanal Machado da}Luiz Ben Hassanal
   Machado da Silva.}
 
 Paradoxalmente, o novo discurso da ``verdade'' científica foi o que
 possibilitou amalgamar sob o signo da liberdade a utilidade prática da
 mão"-de"-obra livre e suas benesses se comparadas com o trabalho executado
 ``por escravos boçais e preguiçosos''. ``Eu desejaria'', diz
-candidamente José Bonifácio, ``para bem seu, que os possuidores de
+candidamente \index{Bonifácio, José}José Bonifácio, ``para bem seu, que os possuidores de
 grandes escravaturas conhecessem que a proibição do tráfico de carne
 humana os fará mais ricos''.\footnote{\index{Sousa, Otávio Tarquínio de}\versal{SOUSA}, O. T. \emph{O pensamento
-  vivo de José Bonifácio}. São Paulo: Martins Fontes, 1965, p. 37.} Em
+  vivo de \index{Bonifácio, José}José Bonifácio}. São Paulo: Martins Fontes, 1965, p. 37.} Em
 todo caso a diferença radical já havia sido produzida e naturalizada.
 
 \chapter{A permanência de uma noção}
@@ -580,7 +578,7 @@ centralidade nas ideias de \index{Fanon, Frantz}Fanon se apresenta.
 Fica evidente que investigar \index{Fanon, Frantz}Fanon é colocar"-se um problema importante:
 O que o presente significa para \index{Fanon, Frantz}Fanon?\footnote{Utilizamos aqui a mesma
   ironia de \index{Adorno, Theodor W.}Adorno na abertura de seu ``Skoteinos'' que inverte a questão: o
-  que Hegel significa para o presente para o que o presente significa
+  que \index{Hegel, G. W. Friedrich}Hegel significa para o presente para o que o presente significa
   para Hegel. \versal{ADORNO}, T. W. \emph{Três estudos sobre Hegel}. São Paulo:
   Editora Unesp, 2013, p. 71.} A linguagem é o \emph{leitmotiv} de suas
 descobertas. Atribuir importância à linguagem em sua relação com a
@@ -618,7 +616,7 @@ popular, senão a de fazer com que o popular se torne teórico. Basta de
   lança ao cerne dessa linguagem para demonstrar os mecanismos de
   dominação existentes nas teorias e ao demonstrá"-los expor sua
   limitação e a subversão possível que daí advêm.} como se não fossemos
-capazes de entender Kant\ldots{}
+capazes de entender \index{Kant, Immanuel}Kant\ldots{}
 
 Ora, entender a posição de \emph{estruturação evanescente} da identidade
 implica apreender o modo pelo qual ela se desdobra historicamente em sua
@@ -635,8 +633,7 @@ socialmente.\footnote{Fazendo grosso modo uma arqueologia dessa noção de
   incompletude do Eu=Eu, podemos observar que essa forma de abordar a
   formação da individualidade, do sujeito moderno, acompanha a
   fundamentação da própria modernidade. Já está presente no
-  \emph{cogito} cartesiano, e seu desdobramento passa por Kant, \index{Fichte, Johann Gottlieb}Fichte e
-  atinge seu ponto de fundamentação social em Hegel, quando analisa a
+  \emph{cogito} cartesiano, e seu desdobramento passa por \index{Kant, Immanuel}Kant, \index{Fichte, Johann Gottlieb}Fichte e atinge seu ponto de fundamentação social em \index{Hegel, G. W. Friedrich}Hegel, quando analisa a
   assim chamada dialética do Senhor e Escravo, demonstrando as relações
   de dominação e poder envoltas na luta entre as consciências. Mais
   tarde essa posição teórica será absorvida, com suas diferenças
@@ -846,13 +843,13 @@ coloca como algo imediatamente interno ao processo, quer dizer: as duas
 posições são coniventes com os termos erguidos pelo colonizador.
 
 Assim, a análise empreendida dos romances \emph{Je suis Martiniquaise},
-\emph{Nini} e o de René Maran demonstra como no nível simbólico das
+\emph{Nini} e o de \index{Maran, René}René Maran demonstra como no nível simbólico das
 personagens os resultados da colonização já estão postos. É como se os
 romances em sua possibilidade de desnudamento de um \emph{etos} fossem
 mais impregnados de verdade do que a empiria da vida do \emph{aqui} e
 \emph{agora}.
 
-A incapacidade de Jean Veneuse -- personagem de Maran comentado por
+A incapacidade de Jean Veneuse -- personagem de \index{Maran, René}Maran comentado por
 \index{Fanon, Frantz}Fanon -- de concretizar sua relação amorosa com uma europeia desnuda
 como o processo de inferioridade circunstanciada por uma \emph{psique
 abandônica} -- quer dizer, aquela cujo trauma de abandono na infância
@@ -952,7 +949,7 @@ registro de operações sistêmicas; e simbólica, no registro linguístico
 que estrutura tais operações.
 
 Como é deliciosa a forma como \index{Fanon, Frantz}Fanon posiciona o sistema de estrutura
-simbólica para demonstrar isso ao comentar o livro de René Maran: ``só
+simbólica para demonstrar isso ao comentar o livro de \index{Maran, René}René Maran: ``só
 sei de uma coisa!'' diz o crítico citando o literato: "{[}\ldots{}{]} que o
 preto é um homem igual aos outros, um homem como os outros, e que seu
 coração, que só parece simples aos ignorantes, é tão complexo quanto o
@@ -983,7 +980,7 @@ uma espécie de essencialismo do racismo e identificá"-lo à sombra dos
 processos modernos cujo cerne é a economia. Assim, quando \index{Fanon, Frantz}Fanon fala de
 estrutura, está falando dos processos econômico"-sociais que engendraram
 não apenas a exclusão, como a concorrência. Por isso, ao rebater o
-essencialista Mannoni, expõe o seguinte:
+essencialista \index{Mannoni, Maud}Mannoni, expõe o seguinte:
 
 \begin{quote}
 Poderíamos retrucar que este desvio da agressividade do proletariado
@@ -992,7 +989,7 @@ consequência da estrutura econômica da África do Sul.
 
 Que é a África do Sul? Um caldeirão onde 2.530.300 brancos espancam
 13.000.000 de negros. Se os brancos pobres odeiam os pretos não é, como
-nos faz entender Mannoni, porque ``o racismo é obra de pequenos
+nos faz entender \index{Mannoni, Maud}Mannoni, porque ``o racismo é obra de pequenos
 comerciantes e de pequenos colonos que deram duro durante muito tempo
 sem sucesso''. Nada disso, é porque a estrutura da África do Sul é uma
 estrutura racista [\ldots{}].\footnote{\versal{FANON}, \emph{idem}, p. 86.}
@@ -1069,7 +1066,7 @@ que defendem uma submissão voluntária e a aceitação pelo indivíduo dos
 pressupostos colonialistas -- tidos como a totalidade concreta --, quanto aqueles que afirmam
 inexoravelmente um retorno às raízes pré"-coloniais\ldots{}
 
-\chapter{\emph{Weltanschauung}\footnote{\emph{Weltanschauung} cuja tradução literal significa ``visão de mundo'' diz respeito ao etos ou à forma de vida alcançada a partir da compreensão da necessidade e a liberdade que daí advém. É um conceito que encontra grande influência em Hegel e depois se desdobra nas escolas hegelianas chegando ao existencialismo e à fenomenologia.} do negro}
+\chapter{\emph{Weltanschauung}\footnote{\emph{Weltanschauung} cuja tradução literal significa ``visão de mundo'' diz respeito ao etos ou à forma de vida alcançada a partir da compreensão da necessidade e a liberdade que daí advém. É um conceito que encontra grande influência em \index{Hegel, G. W. Friedrich}Hegel e depois se desdobra nas escolas hegelianas chegando ao existencialismo e à fenomenologia.} do negro}
 
 É a partir desse \emph{não"-lugar} que \index{Fanon, Frantz}Fanon busca demonstrar a situação
 de completo expatriado do negro. Em \emph{A experiência vivida}, talvez
@@ -1186,7 +1183,7 @@ sobredeterminado pelo exterior, não é escravo da ideia,\footnote{Na visão
   enquanto o judeu pode disfarçar sua origem, o negro a carrega nos tons
   da pele.} mas da sua própria aparição.
 
-E aqui a bela poesia de Victoria Santa Cruz vale como ilustração:
+E aqui a bela poesia de \index{Cruz, Victoria Santa}Victoria Santa Cruz vale como ilustração:
 
 \begin{verse}
 \emph{De hoy en adelante no quiero\\
@@ -1220,7 +1217,7 @@ Llaman a los negros gente de color\\
   \versal{NEGRO} \versal{NEGRO} \versal{NEGRO} \versal{NEGRO}/
   \versal{NEGRO} \versal{NEGRO} \versal{NEGRO} \versal{NEGRO}/
   \versal{NEGRO} \versal{NEGRO} \versal{NEGRO}.\\
-  \emph{In}: \emph{Me gritaron negra}, Victoria Santa Cruz (tradução minha).}
+  \emph{In}: \emph{Me gritaron negra}, \index{Cruz, Victoria Santa}Victoria Santa Cruz (tradução minha).}
   \end{verse}
 
 É com isso, com esse aparecer que
@@ -1342,7 +1339,7 @@ para si um racismo antirracista. Ele não deseja de modo algum dominar o
 mundo: ele quer a abolição dos privilégios étnicos, quaisquer que sejam
 eles; ele afirma sua solidariedade com os oprimidos de qualquer cor. De
 repente a noção subjetiva, existencial, étnica da negritude ``passa'',
-como diz Hegel, para aquela -- objetiva, positiva, exata -- do
+como diz \index{Hegel, G. W. Friedrich}Hegel, para aquela -- objetiva, positiva, exata -- do
 proletariado. ``Para Césaire, diz Senghor, o ``branco'' simboliza o
 capital, como o negro o trabalho\ldots{} É a luta do proletariado mundial que
 canta através dos homens de pele negra de sua raça'' É mais fácil
@@ -1618,7 +1615,7 @@ padrão de vida e à sua generalização ao mundo inteiro, chamamos o
 
 Se isso não é uma vantagem miraculosa -- como cinicamente meu ex"-mentor
 sugeriu numa entrevista\footnote{Naturalmente trata"-se de uma ironia com
-  Frei David Santos, fundador da Educafro que até mais ou menos 2005 era
+  \index{Santos, Frei David}Frei David Santos, fundador da Educafro que até mais ou menos 2005 era
   de esquerda, momento em que ainda muito jovem militava em suas
   fileiras; após ser absorvida pelo \versal{PT}, a Educafro abandonou sua postura
   de transformação social e tornou"-se \versal{ONG}. Segundo o Frei, ser negro
@@ -1697,12 +1694,12 @@ com o choque colonial, sendo ingênua, é, contudo, amplamente
 aproveitável por formas de mercado que em seu nicho se abre para o
 afroempreendedorismo.
 
-Alioune Diop, como representante
+\index{Diop, Alioune}Alioune Diop, como representante
 máximo desse tipo de posicionamento que tende ao universal sem mediação,
 numa busca regressiva das origens, é ironizado: ``O preto se
 universaliza, mas do Liceu Saint"-Louis, em Paris, um deles foi expulso:
 teve a ousadia de ler Engels'';\footnote{\versal{FANON}, \emph{ibidem}.} e \index{Fanon, Frantz}Fanon
-continua: ``Já adivinhamos Alioune Diop a perguntar"-se qual será a
+continua: ``Já adivinhamos \index{Diop, Alioune}Alioune Diop a perguntar"-se qual será a
 posição do gênio negro no concerto universal. Ora, afirmamos que uma
 verdadeira cultura não pode nascer nas condições atuais.''
 
@@ -1772,7 +1769,7 @@ A ideologia atual deixa evidente que as formas políticas capturadas pelo
 mercado são só uma aliança oligárquica entre ciência e riqueza que exige
 todo o poder. Os discursos que se voltam para os particularismos,
 inclusive em toda a sua caricatura (quem não assistiu as propagandas
-políticas de Hillary Clinton?), retomam o velho princípio da filiação em
+políticas de \index{Clinton, Hillary}Hillary Clinton?), retomam o velho princípio da filiação em
 uma comunidade enraizada no sangue, na cor da pele, na
 religião\footnote{Com esse diagnóstico da ideologia atual não fica
   difícil entender por que grandes setores da esquerda progressista
@@ -1829,7 +1826,7 @@ contemporâneo\ldots{}
 \partepigraph{As situações de vantagem ou desvantagem de uma ou outra raça no sistema
 capitalista de países específicos decorre de contextos históricos. Razão
 pela qual, para extinguir os males advindos do capitalismo, não adianta
-querer ``identitarizar'' o capitalismo. (\emph{Bobby Seale})}{}
+querer ``identitarizar'' o capitalismo. (\index{Seale, Bobby}\emph{Bobby Seale})}{}
 \part{O MOVIMENTO NEGRO E O MISTICISMO}
 \removeepigraph
 
@@ -2094,7 +2091,7 @@ trabalho,\footnote{Trabalho = \emph{tripalium}: Três paus, a que eram amarrados
 exploração via trabalho são o próprio limite a ser superado, isto é, a
 estrutura mesma da relação capital/trabalho deve ser implodida.
 
-Hegel deixa claro que a liberdade conquistada pelo escravo nesse
+\index{Hegel, G. W. Friedrich}Hegel deixa claro que a liberdade conquistada pelo escravo nesse
 processo não é verdadeira e, por isso, ele se volta para o interior de
 si mesmo\ldots{}
 
@@ -2257,7 +2254,7 @@ diáspora violenta motivada pela invasão dos colonizadores. Como este
 texto não deixa de ser expressão política, considero esse pensamento
 muito próximo da direita e a partir da década de 70 totalmente integrado
 às formas de gestão da barbárie capitalista. O triunfo desse pensamento
-significou a ruína e assassinato dos Panteras Negras.
+significou a ruína e assassinato dos \index{Negras, Panteras}Panteras Negras.
 
 Por outro lado, existia um pensamento minoritário encarnado
 principalmente nas figuras de \index{Fanon, Frantz}Frantz Fanon e Aime Cèsaire, que
@@ -2307,7 +2304,7 @@ desse fetichismo.\footnote{Não se pode esquecer da terrível tradição
 
 \index{Fanon, Frantz}Fanon, até o fim, combateu esse tipo de posição lutando ao lado da
 \emph{Negritude}.\footnote{A Negritude foi um importante movimento de
-  poetas e críticos que se encontraram na Sorbonne: Aimé Césaire, René
+  poetas e críticos que se encontraram na Sorbonne: \index{Cesaire, Aime@Césaire, Aimé}Aimé Césaire, René
   Depestre, Léopold Sédar Senghor são alguns dos principais nomes que
   depois se converterão em revolucionários nas guerras de independência.
   Este último tinha uma diferença radical com as posições de \index{Fanon, Frantz}Fanon, pois
@@ -2523,7 +2520,7 @@ A vida tanto objetiva quanto
 subjetiva oscila entre uma negatividade radical perturbando o equilíbrio
 socialmente existente e impondo uma nova ordem sociocultural que busca
 estabilizar a situação. Quero dizer com isso que se, por um lado,
-Gilberto Freyre se prende em unilateralidade -- por ter uma visão
+\index{Freyre, Gilberto}Gilberto Freyre se prende em unilateralidade -- por ter uma visão
 conservadora do processo e se apegar demasiadamente rápido à
 universalidade violenta e excludente, por outro, contrapor esses termos
 através de um apelo à manutenção da identidade, ainda que seja muito
@@ -2714,7 +2711,7 @@ torna"-se \emph{reativa,} culminando na adoção utópica -- ou seria
 distópica? -- de um Estado africano \emph{por vir}.
 
 É assim que sua \emph{análise estética,} reduzida sempre ao conteúdo
-explícito, torna"-se equivalente à censura de Platão aos poetas. Se a
+explícito, torna"-se equivalente à censura de \index{Platão}Platão aos poetas. Se a
 forma artística tem autonomia quanto ao contexto e é uma tentativa de
 unir elementos dispersos e heterogêneos no mundo e configurá"-los pela
 sua união, num todo artístico criado, então ela responde por esse mundo
@@ -3000,7 +2997,7 @@ Somos convidados pelas circunstâncias históricas a desafiar os limites
 socialmente impostos. A cada vinte e três minutos um jovem negro é
 assassinado neste país.\footnote{Mapa da Violência da Faculdade
   Latino"-Americana de Ciências Sociais (Flacso).} No momento em que as
-balas do Estado perfuraram o corpo frágil de Marielle\footnote{Marielle,
+balas do Estado perfuraram o corpo frágil de \index{Franco, Marielle}Marielle\footnote{\index{Franco, Marielle}Marielle,
   a quinta vereadora com mais votos no Rio de Janeiro, era negra,
   lésbica, socialista e ativista dos direitos humanos; foi assassinada
   logo após ser nomeada para monitorar a intervenção federal no Rio de
