--- a/LIVRO.tex
+++ b/LIVRO.tex
@@ -15,6 +15,7 @@
 \usepackage[standart]{aparatos}
 \usepackage{tabelas}
 \usepackage{versos}
+\usepackage{gitrevisioninfo}
 
 \usepackage{imakeidx} 
 \makeindex[program=xindy, options=-C utf8 -L portuguese]
