--- a/ORIGINAIS.tex
+++ b/ORIGINAIS.tex
@@ -7,6 +7,96 @@ com a luta antirracista.}
 \end{flushright}
 \thispagestyle{empty}
 
+\chapter*{Apresentação}
+\addcontentsline{toc}{chapter}{Apresentação, por \emph{Tales Ab'Saber}}
+
+\begin{flushright}
+\emph{Tales Ab'Saber}
+\end{flushright}
+
+Douglas Rodrigues Barros é um escritor que atua tanto na esfera da
+ficção e do romance quanto da teoria e do pensamento crítico. Com
+formação em humanidades e filosofia na nova Universidade brasileira --
+exatamente a que recebeu o influxo reparador social mínimo da tardia
+política de cotas brasileira, hoje sobre o ataque degradante do
+neo"-obscurantismo anticrítico e anticientífico que grita alto no Brasil,
+configurando o real devir negro de toda uma instituição social e seus
+sujeitos\ldots{} -- seu trabalho mantém constante contato, enriquecido pela
+experiência e com a experiência da crítica, com o mundo popular e o
+percurso histórico da classe trabalhadora urbana de São Paulo, da qual
+não oculta fazer parte e se posiciona como narrador emancipado.
+
+Sem perder o contato com as mazelas da violência brasileira sobre a vida
+do trabalho, buscando investigar mentalidades e modos possíveis de
+pensar as condições de existência históricas que são franqueadas à
+classe em seus romances recentes, ele também assumiu e dedicou
+importante trabalho ao excedente de violência e sentido patológico da
+vida social que é o circuito de símbolos, práticas e subjetivações que
+envolvem os descaminhos da clivagem racial, e sua própria racialização
+da vida, estratégia torpe do poder que duplica e aprofunda a história de
+recusas dos direitos negados dos pobres, dos pobres negros, em nosso
+capitalismo, de origem colonial, escravista e antissocial.
+
+Este livro, que também é um debate, apresenta o trabalho crítico do
+autor junto a uma das suas comunidades políticas, pondo em questão as
+hipóteses de fundo que movem ações do movimento negro contemporâneo no
+Brasil e esclarecendo uma diferença significativa sobre o modo e a
+dinâmica do pensamento desde uma perspectiva fundamentalmente crítica do
+problema, ou da solução, negra. O livro também é a enunciação de uma
+política da leitura das potências sociais e das energias conceituais que
+envolvem a obra de um grande autor. Ao acatar com precisão o impacto do
+trabalho teórico de um autor fundamental do campo crítico contemporâneo,
+Frantz Fanon, que disparou um sem número de movimentos e modalidades de
+engajamento em todo mundo pós"-colonial, e ao reafirmar a constante
+instabilidade do seu trabalho forte pela superação de toda posição de
+violência, implicada em seu desmonte dialético da racialização, que só
+pode ser anticapitalista, Douglas Rodrigues Barros nos mostra como toda
+uma tradição de compromisso intelectual e critica opera: aumentando a
+energia radical dos conceitos para a transformação social necessária.
+
+Confiando na universalidade negativa da razão, que deve pesar
+igualmente, entre a configuração do objeto e a do próprio sujeito no
+objeto, podemos observar como, para Fanon, de modo muito diferente das
+fixações imaginárias e ``místicas'', como diz Douglas, de parte do
+movimento antirracista definidor das políticas para os negros de hoje, a
+fragilidade das falsificações do racismo branco ocidental implica a
+crítica da falsa integridade da identidade negra, ela também realizada
+em algum momento neste processo social de distorção e mistificação de
+tudo.
+
+Demonstrando com clareza, em conjunto com as intensidades subjetivas
+pessoais do estilo, o modo radical de Fanon encaminhar seu pensamento,
+constantemente em balanço e movimento que critica a subjetivação racista
+situando a experiência negra como o outro negativo da falácia da
+integridade branca, assim revelada, no mesmo movimento que critica o
+apego de entificação fixada da própria condição negra, para também ser
+livre dela, \emph{Lugar de negro, lugar de branco?} repõe em cena a ordem
+moderna de uma razão em trabalho, única universalidade virtual que não
+cede diante do terror.
+
+Este trabalho sem pouso da crítica só pode se resolver após desmontar e
+suspender as camadas de violências e dispositivos ideológicos que deram
+destino à necropolítica colonial e a autoimagem alucinada de
+superioridade da Europa branca moderna, bem como os seus efeitos
+dialéticos na ideia moderna do negro. Assim, ao se suspender o lugar
+histórico falsificado da violência branca, a sua autoimagem, deve"-se
+chegar à suspensão do lugar determinado desde aí das violências
+incorporadas à ideia de alguma identidade negra.
+
+Seria este o projeto da superação histórica da violência racial, e seus
+sujeitos e assujeitados, determinada pela própria história do vínculo de
+capitalismo colonial escravista mercantil e a formação do presente. Sem
+temer a vida crítica da razão, tal trabalho não teme a própria cor, e
+seu lugar sem lugar na ordem branca, evitando qualquer virtual política
+da paranoia, acentuando o horizonte de emancipação pós"-capitalista da
+empreitada.
+
+Assim, implicado humanamente e pessoalmente na intensidade do debate que
+põe em cena, \emph{Lugar de negro, lugar de branco?} é contribuição
+renovadora e esperançosa, sem concessões, para a desalienação mais
+radical ao redor de uma questão premente da contemporaneidade dos
+últimos 500 anos do processo de terror da expansão mundial do Capital.
+
 \chapter{\emph{Uma conversa com o hipotético-leitor}}
 
 Este curto ensaio foi atropelado pela \emph{ordem}. Quando escrevia a
@@ -3230,7 +3320,7 @@ os outros.
 \part{APÊNDICE}
 
 \chapter*{Contra o retorno às raízes:\\ identidade e identitarismo no centro do debate}
-\addcontentsline{toc}{chapter}{Contra o retorno às raízes:\\ identidade e identitarismo no centro do debate
+\addcontentsline{toc}{chapter}{Contra o retorno às raízes: identidade e identitarismo no centro do debate
 \bigskip}
 
 A exaltação da identidade como algo
