--- a/ORIGINAIS.tex
+++ b/ORIGINAIS.tex
@@ -2,7 +2,7 @@
 
 \vfill
 \begin{flushright}
-\emph{Para Douglas Belchior e Adervaldo José dos Santos pelo compromisso
+\emph{Para Douglas Belchior e Adervaldo José dos Santos pelo~compromisso
 com a luta antirracista.}
 \end{flushright}
 \thispagestyle{empty}
@@ -153,7 +153,7 @@ Tornar"-se \emph{colaborador},\footnote{Colaborador como colaboracionista
   aqui exposto, \emph{Cf}. \index{Arantes, Paulo E.}\versal{ARANTES}, P. E. \emph{O novo tempo do mundo:} e
   outros estudos sobre a era da emergência. São Paulo: Boitempo, 2014.
   p. 101-140.} no entanto, tem um preço a ser pago: a elevação do mito
-a verdade, o abandono e até a acusação contra qualquer posição que pense
+à verdade, o abandono e até a acusação contra qualquer posição que pense
 para além das miudezas e misérias cotidianas sob a égide do mundo da
 mercadoria.
 
@@ -346,7 +346,7 @@ territorial dos espaços.
 \chapter{O não-ser que é}
 
 Como uma ficção ganha força material, molda a apreensão de um mundo e
-torna"-se motor do real? Como a realidade reduzida a aparência torna"-se
+torna"-se motor do real? Como a realidade reduzida à aparência torna"-se
 ela própria só o aparente que por trás de si nada oculta senão seu vazio
 constitutivo? Se ``os adjetivos passam e os substantivos
 ficam'',\footnote{\index{Assis, Machado de}Machado de Assis, Diário do Rio de Janeiro, \emph{Balas de estalo}, 16/5/1885.} o adjetivo \emph{negro} dado aos
@@ -1651,7 +1651,7 @@ que naturalmente são faces de uma mesma moeda.
 Por meio de muita arrogância, pela primeira vez na história, operações
 de polícia introjetada na psique dos potenciais descontentes se realizam
 na busca de condenar qualquer voz dissidente ao estabelecido. De 1952 a
-2018 o capital se transformou, se amoldou as circunstâncias. Cada crise
+2018 o capital se transformou, se amoldou às circunstâncias. Cada crise
 serviu para novo impulso. O negativo foi sua base de
 sustentação.\footnote{Retirei essa ideia do importante livro de \index{Grespan, Jorge}Grespan:
   \versal{GRESPAN}, J. \emph{O negativo do capital:} o conceito de crise na
@@ -1739,7 +1739,7 @@ domínio dos corpos, mas sim das escolhas prementes de um estado de
 exceção que escolhe quem pode morrer e ser invisibilizado.
 
 Do mesmo modo, os místicos são só a cara da coroa de uma mesma moeda no
-cofre do rentabilismo. Da Martinica às ilhas Salomão, não há um modo de
+cofre do rentabilismo. Da Martinica às Ilhas Salomão, não há um modo de
 sociabilidade que não esteja sob domínio do Império. Enquanto na Europa
 grupos identitários voltam a reivindicar suas origens arianas, no Brasil
 grupos débeis paulistas querem se separar do resto do país. Esses
@@ -2000,7 +2000,7 @@ dos quais elas podem circular, determinar do modo mais exato possível os
 espaços que elas podem ocupar, em suma, assegurar as circulações num
 sentido que permita afastar as ameaças e assegurar a segurança geral.
 Trata"-se de selecionar esses grupos de populações, de os marcar a um
-tempo como ``espécies'',``séries'' e como ``casos'', no seio de um cálculo
+tempo como ``espécies'', ``séries'' e como ``casos'', no seio de um cálculo
 generalizado do risco.\footnote{Achille Mbembe em \emph{A universalidade
   de Frantz Fanon}.}
 \end{quote}
@@ -3527,7 +3527,7 @@ separação entre objetividade e subjetividade, ao passo que a totalidade
 é a experiência da incompletude dessa individualidade.
 
 Tal concepção só pode estar intrincada nas teias do pensamento
-especulativo do qual \index{Fanon, Frantz}Fanon era legitimo conhecedor. A palavra de ordem é
+especulativo do qual \index{Fanon, Frantz}Fanon era legítimo conhecedor. A palavra de ordem é
 assim a destruição revolucionária da própria noção de raça: \emph{Eu não
 sou seu negro} é a tendência emancipatória no interior do pensamento de
 \index{Fanon, Frantz}Fanon. Nenhuma dessas panaceias identitárias consegue engolir -- ainda
