--- a/fichatecnica.sty
+++ b/fichatecnica.sty
@@ -1,7 +1,7 @@
 % ... (sem seção no HTML)
 
 \newcommand{\titulo}{Lugar de negro,\break lugar de branco?}
-\newcommand{\subtit}{Esboço para uma crítica à metafisica racial}
+\newcommand{\subtit}{Esboço para uma crítica à metafísica racial}
 \newcommand{\sumariotitulo}{\titulo}
 \newcommand{\sumarioautor}{\autor}
 %\newcommand{\organizador}{}
@@ -24,10 +24,10 @@
 %\newcommand\agradecimentos{}
 %\newcommand\indicacao{}
 \newcommand\ISBN{XXXXXXXXXX}
-\newcommand\ano{2018}
+\newcommand\ano{2019}
 \newcommand\edicao{Jorge Sallum}
 \newcommand\coedicao{Felipe Musetti}
-\newcommand\assistencia{Luca Jinkings e Paulo Pompermaier}
+\newcommand\assistencia{Luca Jinkings e Paulo Henrique Pompermaier}
 %\newcommand\revisao{}
 %\newcommand\preparacao{}
 %\newcommand\capa{}
