--- a/PRETAS.tex
+++ b/PRETAS.tex
@@ -1,9 +1,16 @@
 \begin{itemize}
 
 
-\item \textbf{Lugar de negro, lugar de branco?}, \lipsum[1]
+\item \textbf{Lugar de negro, lugar de branco? Esboço para uma crítica à metafísica racial} busca desmistificar a naturalização do lugar da raça na discussão moderna e de sua força instituinte: a escravidão moderna. Com forte alicerce em uma leitura crítica de Frantz Fanon, o ensaio repensa o identitarismo, que ganha espaço nas militâncias, ao relacioná"-lo à procura mística de uma África indissociável do processo de produção capitalista.
+ Ao transpor o problema da raça e do significante negro para um novo patamar, o livro lança novas hipóteses para o movimento negro e aponta para sua potência em superar as relações mercantilizadas nos trópicos.
   
-\item \textbf{Douglas Rodrigues Barros}, \lipsum[2] 
+\item \textbf{Douglas Rodrigues Barros} é um jovem escritor. Atualmente está concluindo doutorado
+em filosofia. É ex"-operário, experiência que talhou profundamente sua escrita e
+pensamento. Para homenagear Marighella, gosta de se referir a si como ``apenas um
+mulato cearense'', apesar de entender que ``mulato'' é um substantivo carregado de
+adjetivação racista. Publicou em 2016 \emph{Cartas estudantis} pela editora Multifoco e em
+2017 \emph{Os terroristas} pela editora Urutau. Nunca quis escrever sobre a questão racial, mas
+o fato da polícia assassinar 45 jovens pobres e negros da periferia em apenas 10 dias de
+operação, e isso ser algo corriqueiro nesse país, não lhe deu alternativas.
 
 \end{itemize}
-
