--- a/PRETAS.tex
+++ b/PRETAS.tex
@@ -1,7 +1,7 @@
 \begin{itemize}
 
 
-\item \textbf{Lugar de negro, lugar de branco? Esboço para uma crítica à metafísica racial} busca desmistificar a naturalização do lugar da raça na discussão moderna e de sua força instituinte: a escravidão moderna. Com forte alicerce em uma leitura crítica de Frantz Fanon, o ensaio repensa o identitarismo, que ganha espaço nas militâncias, ao relacioná"-lo à procura mística de uma África indissociável do processo de produção capitalista.
+\item \textbf{Lugar de negro, lugar de branco? Esboço para uma crítica à metafísica racial} busca desmistificar a naturalização do lugar da raça na discussão moderna e de sua força instituinte: a escravidão moderna. Com forte alicerce em uma leitura crítica de Frantz Fanon, o ensaio repensa o identitarismo, que ganha espaço nas militâncias, ao relacioná"-lo à procura mística de uma África que, historicamente, é indissociável do processo de produção capitalista.
  Ao transpor o problema da raça e do significante negro para um novo patamar, o livro lança novas hipóteses para o movimento negro e aponta para sua potência em superar as relações mercantilizadas nos trópicos.
   
 \item \textbf{Douglas Rodrigues Barros} é um jovem escritor. Atualmente está concluindo doutorado
