--- a/ORIGINAIS.tex
+++ b/ORIGINAIS.tex
@@ -11,7 +11,7 @@ com a luta antirracista.}
 \addcontentsline{toc}{chapter}{Apresentação, por \emph{Tales Ab'Saber}}
 
 \begin{flushright}
-\emph{Tales Ab'Saber}
+\emph{Tales Ab'Sáber}
 \end{flushright}
 
 Douglas Rodrigues Barros é um escritor que atua tanto na esfera da
@@ -1038,7 +1038,7 @@ que estrutura tais operações.
 
 Como é deliciosa a forma como \index{Fanon, Frantz}Fanon posiciona o sistema de estrutura
 simbólica para demonstrar isso ao comentar o livro de \index{Maran, René}René Maran: ``só
-sei de uma coisa!'' diz o crítico citando o literato: "{[}\ldots{}{]} que o
+sei de uma coisa!'' diz o crítico citando o literato: ``{[}\ldots{}{]} que o
 preto é um homem igual aos outros, um homem como os outros, e que seu
 coração, que só parece simples aos ignorantes, é tão complexo quanto o
 do mais complexo dos europeus''.\footnote{\versal{FANON}, \emph{idem}, p. 71.}
