--- a/fichatecnica.sty
+++ b/fichatecnica.sty
@@ -23,7 +23,7 @@
 \newcommand\primeiraedicao{Primeira edição}
 %\newcommand\agradecimentos{}
 %\newcommand\indicacao{}
-\newcommand\ISBN{XXXXXXXXXX}
+\newcommand\ISBN{978-85-7715-596-5}
 \newcommand\ano{2019}
 \newcommand\edicao{Jorge Sallum}
 \newcommand\coedicao{Felipe Musetti}
