suprimindo letras gregas

--- a/ORIGINAIS.tex
+++ b/ORIGINAIS.tex
@@ -2413,7 +2413,7 @@ mística de África homogênea.
 
 É em meados do século \versal{XIX} que, sobre o cavalo branco do iluminismo, cada
 vez mais as ditas ciências humanas se voltam para a compreensão dos
-africanos. A \emph{ethnè} (ετηνοσ)\footnote{``Povo'' em grego.} é então
+africanos. A \emph{ethnè}\footnote{``Povo'' em grego.} é então
 particularizada e funda uma nova doutrina: a \emph{etnologia}. Arma de
 guerra a serviço das metrópoles, \index{Mudimbe, Valentin-Yves}Mudimbe nos faz lembrar que a etnologia
 já era um saber branco ocidental que atribuía uma diferença
