--- a/ORIGINAIS.tex
+++ b/ORIGINAIS.tex
@@ -8,7 +8,7 @@ com a luta antirracista.}
 \thispagestyle{empty}
 
 \chapter*{Apresentação}
-\addcontentsline{toc}{chapter}{Apresentação, por \emph{Tales Ab'Saber}}
+\addcontentsline{toc}{chapter}{Apresentação, \scriptsize{por \emph{Tales Ab'Sáber}}}
 
 \begin{flushright}
 \emph{Tales Ab'Sáber}
@@ -419,9 +419,9 @@ hiperidentificatório o significado de \emph{Negro}.
 
 \begin{verse}
 O branco é o símbolo da divindade ou de Deus.\\
-O negro é o símbolo do espírito do mal e do demônio.\\
+O negro é o símbolo do espírito do mal e do \qb{}demônio.\\
 O branco é o símbolo da luz\ldots{}\\
-O negro é o símbolo das trevas, e as trevas exprimem \qb{}simbolicamente o mal.\\
+O negro é o símbolo das trevas, e as trevas \qb{}exprimem simbolicamente o mal.\\
 O branco é o emblema da harmonia.\\
 O negro, o emblema do Caos.\footnote{\index{Montabert, Jacques-Nicolas Paillot De}\versal{MONTABERT}, J-N. P. \emph{Traité complet de la peinture}, 9 vols (Paris: J.-F. Delion, 1829–51), vol. 7, pp. 422--3. Kératry, Annuaire de l'École.}
 \end{verse}
@@ -603,9 +603,10 @@ ditos ``inferiores'' e antidemocráticos que no lado sul do globo
 continuam a se revoltar quando as áreas centrais do capital já comemoram
 o \emph{fim da história}.
 
-Voltamos então a assumir uma
-posição de denunciar as raízes da dita ``inferioridade'', a criação da
-racialidade, sua verdade no racismo e outras verdades da ``velha
+Voltamos então a assumir uma posição de denunciar as 
+raízes \mbox{ }da \mbox{ }dita \mbox{ }``inferioridade'', a criação da racialidade, sua
+
+\noindent{}verdade no racismo e outras verdades da ``velha
 filosofia''. Assim, deixamos de evitar o olhar que, na Ilustração,
 desfaz o enigma ao apontar que as Luzes não ocultam mais suas sombras
 constitutivas. Debaixo do terrível axioma de \emph{tolerância},
@@ -755,7 +756,7 @@ dessa maneira, \emph{o nada}.\footnote{Como disse \index{Mbembe, Achille}Mbembe:
   duas versões de uma única e mesma figura, a da loucura codificada'',
   em que valham os pesos dessa construção simbólica, a construção de
   ``raça'' possibilitou inúmeras catástrofes durante a modernidade (\emph{Cf}.
-  \index{Mbembe, Achille}\versal{MBEMBE}, A. \emph{Crítica à razão negra}. Lisboa: Antígona, 2014, p. 11).}
+  \index{Mbembe, Achille}\versal{MBEMBE}, A. \emph{Crítica à razão negra}. Lisboa: Antígona, 2014, p. 11.)}
 Isso porque a condição própria da existência se efetiva enquanto um
 olhar do Outro e uma compreensão entregue a nós por esse Outro, que
 ocorre no chão social.
@@ -902,9 +903,9 @@ formas da universalidade imposta. Há uma questão de fundo que ressoa; a
 identificação pura e simples com a alteridade imposta do colonizador
 leva à manutenção das relações de subordinação.
 
-Assim, ao demonstrar a situação de assimilado do martinicano, \index{Fanon, Frantz}Fanon
-deixa claro que o que regula seu processo psíquico é um desavim consigo
-mesmo, uma negação de sua humanidade, por ver no \emph{Outro}
+Assim, ao demonstrar a situação de assimilado do martinicano, \index{Fanon, Frantz}Fanon \mbox{ }deixa claro que o que regula seu \mbox{ }processo psíquico é um desavim consigo mesmo, uma negação de sua
+
+\noindent{}humanidade, por ver no \emph{Outro}
 colonizador a capacidade de sua realização. O que está implicado nisso
 são as condições de possibilidade nas quais o processo de colonização, e
 subordinação, se torna um processo autorreferente de realização. O
@@ -2711,6 +2712,8 @@ identidade \emph{não relacional}. A identidade é um fenômeno relacional
 que advém da interação entre conjuntos diferentes de atividades no mundo
 circundante. Ela é sempre aberta, historicamente determinada e algo
 passageiro.
+
+\pagebreak
 
 \asterisc
 
