ajustando palavra que fugiu da mancha

--- a/ORIGINAIS.tex
+++ b/ORIGINAIS.tex
@@ -1182,8 +1182,8 @@ si o mundo do colonizado e, com isso, desestrutura também sua
 identidade. Com o branco à espreita, o mundo estruturado do negro entra
 em colapso.
 
-Isso elucida dois acontecimentos que são inter"-relacionados no
-pensamento de \index{Fanon, Frantz}Frantz Fanon: por um lado, toda identificação hegemônica
+Isso elucida dois acontecimentos que são inter"-relaciona-
+dos no pensamento de \index{Fanon, Frantz}Frantz Fanon: por um lado, toda identificação hegemônica
 se revela mutável -- inclusive aquela do negro com seu sistema de
 referência --; por outro, ter
 isso às claras manifesta a consequência contingente de uma luta que se
