crédito da foto na ficha técnica

--- a/fichatecnica.sty
+++ b/fichatecnica.sty
@@ -12,7 +12,7 @@
 % Capa
 %\newcommand{\orelha}{}
 %\newcommand{\quartacapa}{}
-%\newcommand{\imagemcapa}{}
+\newcommand{\imagemcapa}{Foto de Robson Dobler com os modelos Alcimar Rodrigues, Matheus Amarins e Natany Nascimento}
 % Capa Detalhe --> "Detalhe" 
 
 % Página de créditos
